styling fixed, overflow on canvas

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,14 @@
-body {
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+body {
+    padding: 1em;
     background-color: #d9dfe2;
     font-family: Roboto-Regular;
+    height: 100vh;
 }
 
 /* font local font Roboto-Regular */
@@ -58,7 +64,9 @@ body {
 main {
     display: grid;
     grid-template-columns: 1fr 340px;
-    grid-template-rows: 5rem 1fr;
+    grid-template-rows: min-content 1fr;
+    gap: 1em;
+    height: 100%;
 }
 
 h1 {
@@ -66,6 +74,8 @@ h1 {
     grid-row: 1/2;
     margin: 1em;
     padding: 0;
+    margin: 0;
+    height: fit-content;
 }
 
 h3 {
@@ -88,6 +98,10 @@ h3:nth-of-type(3) {
     position: relative;
     grid-column: 1/2;
     grid-row: 2/3;
+    overflow: auto;
+}
+#canvasContainer::-webkit-scrollbar {
+    display: none;
 }
 
 .hide {
@@ -102,7 +116,6 @@ h3:nth-of-type(3) {
     column-width: 340px;
     grid-column: 2/3;
     grid-row: 1/3;
-    margin: 0.75rem 1em;
 }
 
 #selectedNodeOptions {
